--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pug": "^2.0.3"
   }
 }
