--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-fetch": "^2.6.0",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pug": "^2.0.3"
